Added Co founder as work experience

--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@
                             <!-- <i class="fa  fa-location-arrow fa-2x " aria-hidden="true"></i>
                                -->
                             <div class="info-details">
+                                <div class="lable"><span class="info-date"> 2017 TO CURRENT</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
+                                <div class="info info-internship"><span>R.E.C.T AND ANGEL CONVENT SCHOOL</span></div>
+                                <div>
+                                    <p>To improve the foundational learning for students living in the Rural Area upto age 16 I decided to start this educational institute. Currently, with the help of my team we have created some very good solutions for improving Logical and Critical thinking, Language Understanding, Speaking Skills and Mathemetical Skills of students upto age 12. We have strictly provided solutions which doesn't include technology at large scale. Our learning solutions are focused on Activity based Learning and Hands On Learning Methodology.    </p>
+                                </div>
+                            </div>
+                        </div>
+                          
+                           <div class="info-group">
+                            <!-- <i class="fa  fa-location-arrow fa-2x " aria-hidden="true"></i>
+                               -->
+                            <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2016</span><span class="info-title"> UI Designer</span></div>
                                 <div class="info info-internship"><span>UI-UX Designer At Infinity Infoway Pvt. Ltd.</span></div>
                                 <div>
