Updated Bio of Co founder

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <div class="lable"><span class="info-date"> 2017 TO CURRENT</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
                                 <div class="info info-internship"><span>R.E.C.T AND ANGEL CONVENT SCHOOL</span></div>
                                 <div>
-                                    <p>To improve the foundational learning for students living in the Rural Area upto age 16 I decided to start this educational institute. Currently, with the help of my team we have created some very good solutions for improving Logical and Critical thinking, Language Understanding, Speaking Skills and Mathemetical Skills of students upto age 12. We have strictly provided solutions which doesn't include technology at large scale. Our learning solutions are focused on Activity based Learning and Hands On Learning Methodology.    </p>
+                                    <p>To improve the foundational learning for students living in the Rural Area upto age 16, I decided to start an educational institute. Currently, with the help of my team we have created some very good solutions for improving Logical and Critical thinking, Language Understanding, Speaking Skills and Mathemetical Skills for students upto age 12 at Angel Convent School. We have strictly provided solutions which doesn't include technology at large scale so that students can use there mind for thinking while learning. Our learning solutions are focused on Activity based Learning and Hands On Learning Methodology so that students can enjoy his/her studies in good environment.    </p>
                                 </div>
                             </div>
                         </div>
