--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,7 @@
                 </ul>
                 
                 </li>
+                  <li><a href="contact.html#contact"> Contact </a></li>
             </ul>
         </div> <!-- /.navbar-collapse -->       
     </div><!-- /.container-->
