--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                  
                                  <div class="info-group">
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> Internship</span></div>
+                                <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> UI-UX Designer</span></div>
                                 <div class="info info-internship"><span>Visual and UI-UX Designer At The Climber.</span></div>
                                 <div>
                                     <p>I was working with The Climber as the Ul/UX Designer and Visual. Here, I use to work in both the domains simultaneously. I have to do the analysis work as the part of their UX Team and I also use to work with the Design Team where I have to make graphical stuff like posters, flyers, logo, UI Screens etc. Apart from this I was also the part of team for making graphic assets for the event named Indian Youth Conclave - 2016 and 2017.</p>
@@ -192,7 +192,7 @@
                         </div>
                         <div class="info-group">
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> Internship</span></div>
+                                <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> Graphic Designer</span></div>
                                 <div class="info info-internship"><span>Graphic and UI Designer At Ediome.</span></div>
                                 <div>
                                     <p>I was working with Ediome as the Graphic and UI Designer. As the designer, I have to make identity design and a good design system and supporting graphics for Ediome.</p>
@@ -223,12 +223,7 @@
         </div>
     </section>
 
-
-
-
-
-
-    <section id="CERTIFICATE">
+        <section id="CERTIFICATE">
         <div class="container">
             <div class="container-data">
                 <div class="row">
