profile photo added

--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-lg-push-6  sidebar">
 
                         <h5>ABOUT MYSELF</h5>
-                     
+                     <div class="info-group">
+                               <img alt="profile photo" src="image/rishabh.png">
+                            </div>
                         <div class="info-group">
                                <div class="info-details">
                                         <div class="lable"><span class="info-title"> BIO</span></div>
