--- a/index.html
+++ b/index.html
@@ -311,13 +311,17 @@
     <footer class="footer_section" id="footer">
         <div class="container">
             <div class="row">
-                <div class="footer-center">
-              
-                </div>
+                 <div class="copyright">
+    <p>&copy 2021 - Rishabh Tiwari</p>
+  </div>
+  
             </div>
         </div>
 
     </footer>
+
+
+    
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.2.min.js"></script>
