--- a/portfolio.html
+++ b/portfolio.html
@@ -412,15 +412,11 @@
 
     <!-- FOOTER -->
     <footer class="footer_section" id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-center">
-
-
-                </div>
-            </div>
-        </div>
-
+                 <div class="copyright">
+                <h6>&copy 2021 - Rishabh Tiwari</h6>
+  </div>
+  
+        
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
