--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
    <!-- FOOTER -->
     <footer class="footer_section" id="footer">
                  <div class="copyright">
-                <h6>&copy 2021 - Rishabh Tiwari</h6>
+                <span class="info-title"> &copy 2021 - Rishabh Tiwari</span>
   </div>
   
         
