--- a/portfolio.html
+++ b/portfolio.html
@@ -186,10 +186,15 @@
                   
                                <div class="sidebar">
                      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+
                         <a href="https://www.behance.net/gallery/56833623/Travelly-App-Design"  target=”_blank”>
                            <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfolioUIUX5.png">
                         </div>
+
+                                    <div class="info">
+                                    <p>Click to Open Project</p>
+                                    </div>
                         </a>
                     </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
