--- a/portfolio.html
+++ b/portfolio.html
@@ -192,8 +192,8 @@
                             <img alt="Portfolio Image" src="image/logo/portfolioUIUX5.png">
                         </div>
 
-                                    <div class="info">
-                                    <p>Click to Open Project</p>
+                                    <div class="overlay">
+                                    <p class="text">Click to Open Project</p>
                                     </div>
                         </a>
                     </div>
