Css hover update

--- a/portfolio.html
+++ b/portfolio.html
@@ -190,17 +190,22 @@
                         <a href="https://www.behance.net/gallery/56833623/Travelly-App-Design"  target=”_blank”>
                            <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfolioUIUX5.png">
+                         <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
 
-                                    <div class="overlay">
-                                    <p class="text">Click to Open Project</p>
-                                    </div>
+                                   
                         </a>
                     </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
                         <a href="https://www.behance.net/gallery/55950665/Angel-Convent-School-Website" target=”_blank”>
                         <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfolioUIUX1.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
+                        </div>
                         </div>
                         </a>
                     </div>
@@ -208,6 +213,9 @@
                         <a href="https://www.behance.net/gallery/63838901/Furnify-Website-Concept" target="_blank">
                         <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfolioUIUX2.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                          </a>
                     </div>
@@ -215,6 +223,9 @@
                         <a href="https://www.behance.net/gallery/99331495/Mycaptain-Web-Application-Version-1" target="_blank">
                            <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfolioUIUX3.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                         </a>
                     </div>
@@ -222,6 +233,9 @@
                        <a href="https://www.behance.net/gallery/56256277/Patels-Tour-and-Travels-Application" target="_blank">
                         <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfolioUIUX4.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                         </a>
                     </div>
@@ -251,6 +265,9 @@
                        <a href="https://www.behance.net/gallery/56256495/NGI-Magazine-Design-Vol-6" target="_blank">
                         <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfoliographic6.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                         </a>
                     </div>
@@ -258,6 +275,9 @@
                         <a href="https://www.behance.net/gallery/56257657/NGI-Magazine-Design-Vol-2"  target=”_blank”>
                            <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfoliographic1.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                         </a>
                     </div>
@@ -265,6 +285,9 @@
                         <a href="https://www.behance.net/gallery/56257009/NGI-Magazine-Design-Vol-3" target=”_blank”>
                         <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfoliographic2.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                         </a>
                     </div>
@@ -272,6 +295,9 @@
                         <a href="https://www.behance.net/gallery/56257393/NGI-Magazine-Design-Vol-4" target="_blank">
                         <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfoliographic3.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                          </a>
                     </div>
@@ -279,6 +305,9 @@
                         <a href="https://www.behance.net/gallery/56256815/NGI-Magazine-Design-Vol-5" target="_blank">
                            <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfoliographic4.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                         </a>
                     </div>
@@ -286,6 +315,9 @@
                        <a href="https://www.behance.net/gallery/56256495/NGI-Magazine-Design-Vol-6" target="_blank">
                         <div class="gallery_image">
                             <img alt="Portfolio Image" src="image/logo/portfoliographic5.png">
+                            <div class="overlay">
+                                        <span class="info-title text"> Click to Open Project</span>
+                                    </div>
                         </div>
                         </a>
                     </div>
