Profile cgpa added

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> GRADUATION</span></div>
                                 <div class="info info-graduation"><span>I have completed my Bachelor of Engineering (B.E.) in the feild of
                                         Information and Technology (I.T.) with Noble Group of Institution (N.G.I.) from Gujarat
-                                        Technological University.</span></div>
+                                        Technological University with 9.19 ( SPI ), 8.48 ( CPI ) and 8.72 ( CGPA  ).</span></div>
                             </div>
                         </div>
                         <div class="info-group">
