--- a/certificate.html
+++ b/certificate.html
@@ -130,7 +130,9 @@
 
                     </div>
 
-
+ <div class="gotoTop">
+                      <a href="index.html#PROFILE"><button> <i class="fa  fa-arrow-up fa-2x " aria-hidden="true"></i></button></a>
+                  </div>
 
                 </div>
             </div>
