Portfolio Poster Update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="jumbotron">
                         <h1>PROFILE</h1>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6  col-lg-3 sidebar">
+                    <div class="col-xs-12 col-sm-6 col-md-3  col-lg-3 sidebar">
                         <div class="leftside">
 
                             <h5>Info</h5>
@@ -107,15 +107,7 @@
                                         <div class="info"><span>VAPI, GUJARAT</span></div>
                                     </div>
                                 </div>
-                            <!--    <div class="info-group">
-                                    <i class="fa  fa-user fa-2x " aria-hidden="true"></i>
-                                    <div class="info-details">
-                                        <div class="lable"><span class="info-title"> BIO</span></div>
-                                        <div class="info"><span>Hardworking IT graduate with proven Leadership Role and Creative Skills. 
-                                        <br> I want to contribute with my abilities towards growth of organization with the best utilization of my knowledge and potential skills.<br></span></div>
-                                    </div>
-                                </div>
-                                -->
+                
                                  <h5>Education</h5>
                         <div class="info-group">
                             <div class="info-details">
@@ -145,7 +137,7 @@
                         </div>
                     </div>
 
-  <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-lg-push-6  sidebar">
+  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-md-push-6  col-lg-push-6  sidebar">
 
                         <h5>ABOUT MYSELF</h5>
                      <div class="info-group">
@@ -166,12 +158,10 @@
                                 </div>
                     </div>
                    
-                    <div class="col-xs-12 col-sm-12 col-md-12  col-lg-6 col-lg-pull-3  sidebar">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-lg-pull-3 col-md-pull-3  sidebar">
 
                         <h5>Work Experience</h5>
                         <div class="info-group">
-                            <!-- <i class="fa  fa-location-arrow fa-2x " aria-hidden="true"></i>
-                               -->
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2017 TO CURRENT</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
                                 <div class="info info-internship"><span>R.E.C.T AND ANGEL CONVENT SCHOOL</span></div>
