--- a/certificate.html
+++ b/certificate.html
@@ -119,7 +119,7 @@
                         <h5>DIGITAL & DESIGN CERTIFICATES</h5>
                         <div class="info-group">
                             <div class="info-details">
-                                <div class="info info-graduation"><span>I have done the certification course of Designing with course material provided by The MyCaptain Project at llMB. This training is offered by Climbers Team who helps the student to learn things online and it is NSRCEL and llMB incubated company.</span></div>
+                                <div class="info info-graduation"><span>I have done the certification course of Designing with course material provided by The MyCaptain Project at llMB. This training is offered by The Climber Team who helps the student to learn things online and it is NSRCEL and llMB incubated company.</span></div>
                                 <div class="Certificatelable"><span class="info-date"> 2016</span><span class="info-title"> GRAPHIC DESIGN COURSE</span></div>
                                 <div class="Certificatelable"><span class="info-date"> 2017</span><span class="info-title"> M.U.N. COURSE</span></div>
                                 <div class="Certificatelable"><span class="info-date"> 2019</span><span class="info-title"> DIGITAL MARKETING COURSE</span></div>
