--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html">
+    <!-- <meta http-equiv="Content-Type" content="text/html"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Description of the page less than 150 characters">
     <title>RISHABH TIWARI</title>
@@ -46,8 +46,8 @@
                 <li><a href="certificate.html"> Certificates   </a></li>
                 
                 <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
-                aria-expended="false"> Portfolio <span class="caret"> </span> </a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" > 
+                    Portfolio <span class="caret"> </span> </a>
                 <ul class="dropdown-menu">
                     <li><a href="portfolio.html#LogoProject"> LOGO PROJECTS </a></li>
                     <li><a href="portfolio.html#UXPROJECTS"> UI UX PROJECTS</a></li>
@@ -218,7 +218,7 @@
     <!-- FOOTER -->
     <footer class="footer_section" id="footer">
                  <div class="copyright">
-                <span class="info-title"> &copy 2021 - Rishabh Tiwari</span>
+                <span class="info-title"> &copy; 2021 - Rishabh Tiwari</span>
   </div>
   
         
