--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,7 @@
 				</ul>
 				
 				</li>
+				<li><a href="image/RISHABH-RESUME-CV.pdf"> Download CV   </a></li>
 			  <!-- <li><a href="contact.html#contact"> Contact </a></li> -->
 			</ul>
 		</div> <!-- /.navbar-collapse -->       
