--- a/index.html
+++ b/index.html
@@ -162,9 +162,23 @@
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-lg-pull-3 col-md-pull-3  sidebar">
 
                         <h5>Work Experience</h5>
+
+                         <div class="info-group">
+                            <div class="info-details">
+                                <div class="lable"><span class="info-date"> 2021 TO CURRENT</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
+                                <div class="info info-internship"><span>DICQ Infotech Pvt. Ltd.</span></div>
+                                <div>
+                                    <p> I am currently working at DICQ Infotech Pvt. Ltd. as the Ul/UX Designer. Here, I 
+have to do the analysis work as the part of their UX Team and I also make UI for 
+their website accordingly with the Design Team.   </p>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="info-group">
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2017 TO CURRENT</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
+                                <div class="lable"><span class="info-date"> 2017 TO 2021</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
                                 <div class="info info-internship"><span>R.E.C.T AND ANGEL CONVENT SCHOOL</span></div>
                                 <div>
                                     <p>To improve the foundational learning for students living in the Rural Area upto age 16, I decided to start an educational institute. Currently, with the help of my team we have created some very good solutions for improving Logical and Critical thinking, Language Understanding, Speaking Skills and Mathemetical Skills for students upto age 12 at Angel Convent School. We have strictly provided solutions which doesn't include technology at large scale so that students can use there mind for thinking while learning. Our learning solutions are focused on Activity based Learning and Hands On Learning Methodology so that students can enjoy his/her studies in good environment.    </p>
