--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                          <div class="info-group">
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2021 TO CURRENT</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
+                                <div class="lable"><span class="info-date"> 2021 TO CURRENT</span><span class="info-title"> UI / UX Developer</span></div>
                                 <div class="info info-internship"><span>DICQ Infotech Pvt. Ltd.</span></div>
                                 <div>
                                     <p> I am currently working at DICQ Infotech Pvt. Ltd. as the Ul/UX Designer. Here, I 
