--- a/index.html
+++ b/index.html
@@ -56,7 +56,16 @@
                 </ul>
                 
                 </li>
-                <li><a href="image/RISHABH-RESUME-CV.pdf"> Download CV   </a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" > 
+                        Download CV <span class="caret"> </span> </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf"> Download Resume </a></li>
+                        <li><a href="image/Rishabh Tiwari - Project Profile - 2023.pdf"> Download Project Profile</a></li>
+                    </ul>
+                    
+                    </li>
               <!-- <li><a href="contact.html#contact"> Contact </a></li> -->
             </ul>
         </div> <!-- /.navbar-collapse -->       
