Updated Work description for all company

--- a/index.html
+++ b/index.html
@@ -171,15 +171,32 @@
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-lg-pull-3 col-md-pull-3  sidebar">
 
                         <h5>Work Experience</h5>
+                        <div class="info-group">
+                            <div class="info-details">
+                                <div class="lable"><span class="info-date"> 2022 TO CURRENT</span><span class="info-title"> UI / UX Developer</span></div>
+                                <div class="info info-internship"><span>INFOCEPTS TECHNOLOGIES PVT. LTD.</span></div>
+                                <div>
+                                    <p> During my time at Infocepts, I designed and developed www.infocepts.com using my extensive 
+                                        experience in HTML, CSS, and responsive design. I ensured that the website was mobile-friendly 
+                                        and accessible on multiple devices by implementing design principles. I also optimized website 
+                                        performance and ensured cross-browser compatibility by writing clean and efficient code. 
+                                        Through my attention to detail and commitment to best practices, I delivered an engaging and 
+                                        seamless user experience that exceeded client expectations.
+                                          </p>
+                                </div>
+                            </div>
+                        </div>
 
                          <div class="info-group">
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2021 TO CURRENT</span><span class="info-title"> UI / UX Developer</span></div>
-                                <div class="info info-internship"><span>DICQ Infotech Pvt. Ltd.</span></div>
+                                <div class="lable"><span class="info-date"> 2021 TO 2022</span><span class="info-title"> UI / UX Developer</span></div>
+                                <div class="info info-internship"><span>JEWEL PRO-TECH PVT. LTD.</span></div>
                                 <div>
-                                    <p> I am currently working at DICQ Infotech Pvt. Ltd. as the Ul/UX Designer. Here, I 
-have to do the analysis work as the part of their UX Team and I also make UI for 
-their website accordingly with the Design Team.  </p>
+                                    <p> While working at Jewel Pro Tech Pvt. Ltd., I was responsible for designing user-friendly interfaces 
+                                        for the web. Using my expertise in HTML, CSS, and responsive design, I created intuitive UI 
+                                        designs for the website www.diamondicq.com, and implemented them with a focus on 
+                                        performance and compatibility. By utilizing my skills in UI design and front-end development, I 
+                                        delivered visually appealing and highly functional user interfaces that exceeded expectations.  </p>
                                 </div>
                             </div>
                         </div>
@@ -188,29 +205,61 @@ their website accordingly with the Design Team.  </p>
                         <div class="info-group">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2017 TO 2021</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
-                                <div class="info info-internship"><span>R.E.C.T AND ANGEL CONVENT SCHOOL</span></div>
+                                <div class="info info-internship"><span>ANGEL CONVENT SCHOOL</span></div>
                                 <div>
-                                    <p>To improve the foundational learning for students living in the Rural Area upto age 16, I decided to start an educational institute. Currently, with the help of my team we have created some very good solutions for improving Logical and Critical thinking, Language Understanding, Speaking Skills and Mathemetical Skills for students upto age 12 at Angel Convent School. We have strictly provided solutions which doesn't include technology at large scale so that students can use there mind for thinking while learning. Our learning solutions are focused on Activity based Learning and Hands On Learning Methodology so that students can enjoy his/her studies in good environment.    </p>
+                                    <p>As the founder of an educational institute aimed at improving foundational learning for rural 
+                                        students, I have developed a website to showcase our educational tools. I utilized my skills in 
+                                        HTML, CSS, and responsive design to create a user-friendly interface for our website that is 
+                                        accessible on multiple devices</p>
+                                        <p>Additionally, I attempted to create a learning platform using WordPress to enhance critical 
+                                            thinking, language understanding, and mathematical skills. However, due to cost constraints, I 
+                                            had to find an alternative solution. Instead, I focused on creating interactive interfaces for our 
+                                            educational tools using the aforementioned technologies. This experience has allowed me to 
+                                            further refine my front-end development skills while contributing to the education sector in a 
+                                            meaningful way.</p>
                                 </div>
                             </div>
                         </div>
                           
+                        <div class="info-group">
+                            <div class="info-details">
+                                <div class="lable"><span class="info-date"> 2017 TO 2021</span><span class="info-title"> GRAPHIC AND UI DESIGNER.</span></div>
+                                <div class="info info-internship"><span>FREELANCING AND REMOTE WORK.</span></div>
+                                <div>
+                                    <p>As a freelance Graphic and UI Designer, I have continued to develop my skills in the technology 
+                                        domain while also running my school. I have had the opportunity to work on a wide range of 
+                                        projects, including designing logos, creating branding materials, and developing interfaces for 
+                                        mobile and web applications.</p>
+                                        <p>Through my work, I have gained experience in utilizing tools such as Adobe Photoshop, 
+                                            Illustrator, and Figma to create visually appealing and functional designs. Additionally, my 
+                                            experience as a school owner has provided me with unique insights into designing interfaces for 
+                                            educational tools, allowing me to create engaging and effective designs for learning platforms. </p>
+                                </div>
+                            </div>
+                        </div>
                  
                                  <div class="info-group">
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> UI-UX Designer</span></div>
-                                <div class="info info-internship"><span>Visual and UI-UX Designer At The Climber.</span></div>
+                                <div class="lable"><span class="info-date"> 2017 - 2018</span><span class="info-title"> VISUAL AND UI-UX DESIGNER</span></div>
+                                <div class="info info-internship"><span>THE CLIMBER KNOWLEDGE PVT. LTD.</span></div>
                                 <div>
-                                    <p>I was working with The Climber as the Ul/UX Designer and Visual. Here, I use to work in both the domains simultaneously. I have to do the analysis work as the part of their UX Team and I also use to work with the Design Team where I have to make graphical stuff like posters, flyers, logo, UI Screens etc. Apart from this I was also the part of team for making graphic assets for the event named Indian Youth Conclave - 2016 and 2017.</p>
+                                    <p>During my time at The Climber as a UI/UX Designer and Visual, I simultaneously worked on 
+                                        analyzing user experience as a part of the UX team, and creating graphical assets like posters, 
+                                        flyers, logos, UI screens as a part of the Design team.</p>
+                                        <p> Additionally, I contributed to the creation of graphic assets for the Indian Youth Conclave events 
+                                        in 2016 and 2017. My ability to balance both design and user experience responsibilities allowed 
+                                        me to create engaging and visually appealing interfaces while meeting user needs.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="info-group">
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> Graphic Designer</span></div>
+                                <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> GRAPHIC AND UI-UX DESIGNER</span></div>
                                 <div class="info info-internship"><span>Graphic and UI Designer At Ediome.</span></div>
                                 <div>
-                                    <p>I was working with Ediome as the Graphic and UI Designer. As the designer, I have to make identity design and a good design system and supporting graphics for Ediome.</p>
+                                    <p>As a Graphic and UI Designer at Ediome, I was responsible for creating compelling visual designs 
+                                        and building effective design systems. My work involved designing identity systems and creating 
+                                        supporting graphics to ensure consistency and coherence across various design assets.</p>
                                 </div>
                             </div>
                         </div>
@@ -219,10 +268,29 @@ their website accordingly with the Design Team.  </p>
                             <!-- <i class="fa  fa-location-arrow fa-2x " aria-hidden="true"></i>
                                -->
                             <div class="info-details">
-                                <div class="lable"><span class="info-date"> 2016</span><span class="info-title"> UI Designer</span></div>
+                                <div class="lable"><span class="info-date"> 2016 - 2017</span><span class="info-title"> UI-UX DESIGNER.</span></div>
                                 <div class="info info-internship"><span>UI-UX Designer At Infinity Infoway Pvt. Ltd.</span></div>
                                 <div>
-                                    <p>I have worked as the UI -UX Designer at llPL. Their I had made a lot of designed based projects. The major work for me at llPL was to make UI Designs for the mobile application ,websites and to make redesigns for the existing applications.</p>
+                                    <p>As a UI/UX Designer at IIPL, I have created various design-based projects, including UI designs for 
+                                        mobile applications and websites, as well as redesigns for existing applications. One notable 
+                                        project I worked on was creating a UI design for an application for Patel Tour and Travel. My role 
+                                        involved conducting user research and using design tools such as Figma and Adobe Creative Suite 
+                                        to develop intuitive and visually appealing interfaces that meet user needs.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="info-group">
+                            <!-- <i class="fa  fa-location-arrow fa-2x " aria-hidden="true"></i>
+                               -->
+                            <div class="info-details">
+                                <div class="lable"><span class="info-date"> 2016 - 2017</span><span class="info-title"> Graphic Designer</span></div>
+                                <div class="info info-internship"><span>VISUAL DESIGNING - FREELANCING WORK</span></div>
+                                <div>
+                                    <p>As a freelance graphic designer, I created visually appealing designs for various clients across 
+                                        diverse industries using Adobe Creative Suite. I developed my ability to communicate effectively 
+                                        with clients and gained a deeper understanding of the design process.
+                                        </p>
                                 </div>
                             </div>
                         </div>
