Adding image towards left

--- a/index.html
+++ b/index.html
@@ -82,6 +82,25 @@
                         <h1>PROFILE</h1>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3  col-lg-3 sidebar">
+                        <div>
+                            <h5>ABOUT MYSELF</h5>
+                     <div class="info-group">
+                               <img alt="profile photo" src="image/rishabh.png">
+                            </div>
+                        <div class="info-group">
+                               <div class="info-details">
+                                        <div class="lable"><span class="info-title"> BIO</span></div>
+                                        <div class="info"><span>Hardworking IT graduate with proven Leadership Role and Creative Skills. 
+                                        I want to contribute with my abilities towards growth of organization with the best utilization of my knowledge and potential skills.<br><br></span></div>
+                            </div></div>
+                        <div class="info-group">
+                               <div class="info-details">
+                                        <div class="lable"><span class="info-title"> KEY HIGHLIGHTS</span></div>
+                            
+                            <div class="info"><span>My expertise lies in successfully conceptualizing, designing, and modifying my background has enabled me to excel in making consumer-friendly and on-trend products to achieve customer objectives and preferences, resulting in accelerated client revenues. <br><br>As an adept problem solver, I would make a valuable addition to your team due to my diligent nature when it comes to successfully completing tasks and ensuring positive end-user experiences.<br><br>With  my  ability  to   collaborate  effectively with clients, peers, and senior management teams— I am confident that my talents and abilities will significantly benefit to your organization.</span></div>
+                                    </div>
+                                </div>
+                        </div>
                         <div class="leftside">
 
                             <h5>Info</h5>
