--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
                         <div class="info-group">
                                <div class="info-details">
                                         <div class="lable"><span class="info-title"> BIO</span></div>
-                                        <div class="info"><span>Hardworking IT graduate with proven Leadership Role and Creative Skills. 
-                                        I want to contribute with my abilities towards growth of organization with the best utilization of my knowledge and potential skills.<br><br></span></div>
+                                        <div class="info"><span>As an IT graduate with expertise in UI design and front-end development using HTML, CSS, and 
+                                            Bootstrap, I possess a strong work ethic, leadership experience, and creative aptitude. I am eager to 
+                                            contribute my skills towards supporting the growth of an organization and delivering impactful results.<br><br></span></div>
                             </div></div>
                         <div class="info-group">
                                <div class="info-details">
@@ -172,7 +173,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-lg-pull-3 col-md-pull-3  sidebar">
 
                         <h5>Work Experience</h5>
-                        <div class="info-group">
+                        <div class="info-group col-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2022 TO CURRENT</span><span class="info-title"> UI / UX Developer</span></div>
                                 <div class="info info-internship"><span>INFOCEPTS TECHNOLOGIES PVT. LTD.</span></div>
@@ -188,7 +189,7 @@
                             </div>
                         </div>
 
-                         <div class="info-group">
+                         <div class="info-group col-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2021 TO 2022</span><span class="info-title"> UI / UX Developer</span></div>
                                 <div class="info info-internship"><span>JEWEL PRO-TECH PVT. LTD.</span></div>
