--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-lg-pull-3 col-md-pull-3  sidebar">
 
                         <h5>Work Experience</h5>
-                        <div class="info-group col-6">
+                        <div class="info-group col-md-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2022 TO CURRENT</span><span class="info-title"> UI / UX Developer</span></div>
                                 <div class="info info-internship"><span>INFOCEPTS TECHNOLOGIES PVT. LTD.</span></div>
@@ -189,7 +189,7 @@
                             </div>
                         </div>
 
-                         <div class="info-group col-6">
+                         <div class="info-group col-md-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2021 TO 2022</span><span class="info-title"> UI / UX Developer</span></div>
                                 <div class="info info-internship"><span>JEWEL PRO-TECH PVT. LTD.</span></div>
@@ -204,7 +204,7 @@
                         </div>
 
 
-                        <div class="info-group">
+                        <div class="info-group col-md-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2017 TO 2021</span><span class="info-title"> CO FOUNDER and EDUCATOR</span></div>
                                 <div class="info info-internship"><span>ANGEL CONVENT SCHOOL</span></div>
@@ -223,7 +223,7 @@
                             </div>
                         </div>
                           
-                        <div class="info-group">
+                        <div class="info-group col-md-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2017 TO 2021</span><span class="info-title"> GRAPHIC AND UI DESIGNER.</span></div>
                                 <div class="info info-internship"><span>FREELANCING AND REMOTE WORK.</span></div>
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                  
-                                 <div class="info-group">
+                                 <div class="info-group col-md-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2017 - 2018</span><span class="info-title"> VISUAL AND UI-UX DESIGNER</span></div>
                                 <div class="info info-internship"><span>THE CLIMBER KNOWLEDGE PVT. LTD.</span></div>
@@ -254,7 +254,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="info-group">
+                        <div class="info-group col-md-6">
                             <div class="info-details">
                                 <div class="lable"><span class="info-date"> 2017</span><span class="info-title"> GRAPHIC AND UI-UX DESIGNER</span></div>
                                 <div class="info info-internship"><span>Graphic and UI Designer At Ediome.</span></div>
@@ -266,7 +266,7 @@
                             </div>
                         </div>
 
-                         <div class="info-group">
+                         <div class="info-group col-md-6">
                             <!-- <i class="fa  fa-location-arrow fa-2x " aria-hidden="true"></i>
                                -->
                             <div class="info-details">
@@ -282,7 +282,7 @@
                             </div>
                         </div>
 
-                        <div class="info-group">
+                        <div class="info-group col-md-6">
                             <!-- <i class="fa  fa-location-arrow fa-2x " aria-hidden="true"></i>
                                -->
                             <div class="info-details">
